--- a/index.html
+++ b/index.html
@@ -1,110 +1,139 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Receipt Verify — Demo</title>
-<script src="https://unpkg.com/tweetnacl@1.0.3/nacl-fast.min.js"></script>
-<style>
-  body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:40px;line-height:1.35}
-  .wrap{max-width:880px;margin:auto}
-  textarea{width:100%;min-height:140px;font-family:ui-monospace,Consolas,monospace;font-size:13px}
-  .row{display:grid;gap:18px;margin:18px 0}
-  .two{grid-template-columns:1fr 1fr}
-  .btn{padding:10px 14px;border:1px solid #ddd;border-radius:8px;cursor:pointer;background:#fff}
-  .btn:hover{background:#f7f7f7}
-  .ok{color:#0a7a29;font-weight:600}
-  .bad{color:#b00020;font-weight:600}
-  code{background:#f6f6f6;padding:2px 6px;border-radius:6px}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Receipt Verify — Demo</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div class="wrap">
-  <h1>Receipt Verify — Demo</h1>
-  <p>This page verifies a tiny, signed receipt (Ed25519). We remove <code>sig</code>, canonically stringify the rest, and check the signature against a public key. Works offline in airplane mode.</p>
+  <main class="wrap">
+    <header class="hero">
+      <h1>Receipt Verify — Demo</h1>
+      <p>This page verifies a tiny, signed receipt (Ed25519). We remove <code>sig</code>, canonically stringify the rest, and check the signature against a public key. Works offline.</p>
+    </header>
 
-  <h3>Public key (hex)</h3>
-  <p><code id="pub"></code></p>
+    <section class="card">
+      <label class="label">Public key (hex)</label>
+      <div class="row copyrow">
+        <input id="pubHex" class="input mono" readonly value="0891c1199e83fa36fea9a44a3a45c42bbab8f693a8c3..." />
+        <button class="btn ghost" onclick="copyPub()">Copy</button>
+      </div>
+      <p class="fine">Tip: this demo uses a dev key. In production, fetch from <code>/.well-known/receipts.json</code> and cache for airplane-mode verify.</p>
+    </section>
 
-  <div class="row two">
-    <div>
-      <h3>Green receipt (write)</h3>
-      <textarea id="green"></textarea>
-      <button class="btn" onclick="verify('green','out1')">Verify Green</button>
-      <div id="out1"></div>
-    </div>
-    <div>
-      <h3>Amber receipt (revoke)</h3>
-      <textarea id="amber"></textarea>
-      <button class="btn" onclick="verify('amber','out2')">Verify Amber</button>
-      <div id="out2"></div>
-    </div>
-  </div>
+    <section class="grid">
+      <div class="card">
+        <h3>Green receipt <span class="pill green">write</span></h3>
+        <pre class="pre"><code id="greenJson">{
+  "rid": "7b04a5c1-18bb-479e-94f0-00b3c4b4bf59",
+  "when": 1738790400,
+  "where": {"host": "demo", "coarse": "device:server"},
+  "what": {"badge": "green", "kind": "memory"},
+  "flags": ["mem.write"],
+  "kid": "dev-1",
+  "sig": "8f…deadbeef"
+}</code></pre>
+        <div class="row">
+          <button class="btn" onclick="verify('greenJson','greenResult')">Verify Green</button>
+          <div id="greenResult" class="result"></div>
+        </div>
+        <button class="btn ghost small" onclick="copy('greenJson')">Copy JSON</button>
+      </div>
 
-  <p>How it works: <em>stable sort</em> JSON keys deeply → <code>TextEncoder</code> bytes → <code>nacl.sign.detached.verify(message, sig, pub)</code>.</p>
-</div>
+      <div class="card">
+        <h3>Amber receipt <span class="pill amber">revoke</span></h3>
+        <pre class="pre"><code id="amberJson">{
+  "rid": "77c6fd0f-2181-4ad9-b72b-df30bbfdb9c6",
+  "when": 1738790500,
+  "where": {"host": "demo", "coarse": "device:server"},
+  "what": {"badge": "amber", "kind": "memory"},
+  "flags": ["mem.revoke"],
+  "revoke_of": "7b04a5c1-18bb-479e-94f0-00b3c4b4bf59",
+  "kid": "dev-1",
+  "sig": "9a…c0ffee"
+}</code></pre>
+        <div class="row">
+          <button class="btn" onclick="verify('amberJson','amberResult')">Verify Amber</button>
+          <div id="amberResult" class="result"></div>
+        </div>
+        <button class="btn ghost small" onclick="copy('amberJson')">Copy JSON</button>
+      </div>
+    </section>
 
-<script>
-// ---- demo keys/receipts (pre-filled) ----
-const PUB_HEX = "0891c1199e83fa36fea9a44a3a45c42bbab8f693a8c3f45756e388e670c31a71";
+    <section class="card">
+      <h3>Paste any receipt</h3>
+      <textarea id="pasteArea" class="input mono" rows="8" placeholder='Paste a receipt JSON here…'></textarea>
+      <div class="row">
+        <button class="btn" onclick="verifyPaste()">Verify Pasted</button>
+        <div id="pasteResult" class="result"></div>
+      </div>
+    </section>
 
-const GREEN = {
-  "rid":"7b04a5c1-18bb-479e-94f0-00b3c4b4bf59",
-  "when":1738790400,
-  "where":{"coarse":"device:server","host":"demo"},
-  "what":{"badge":"green","kind":"memory"},
-  "flags":["mem.write"],
-  "issuer":"openline-memory",
-  "sig":"e57d70664ffcd44c2e545914cbcbc47519ebcd0a49801f6ca09350ef50e1b14bf9d18bce64e91e4b2b2601c9ff76a62dc6326a2d6bfdbf78f75b820f0c3712c9"
-};
+    <section class="card">
+      <h3>How it works</h3>
+      <ol class="steps">
+        <li>Stable-sort JSON keys deeply (JCS-style), remove <code>sig</code>.</li>
+        <li>Encode to bytes (<code>TextEncoder</code>).</li>
+        <li>Verify detached signature with Ed25519 and the public key.</li>
+      </ol>
+      <p class="fine">Fields shown: <code>rid</code>, <code>when</code>, <code>where</code>, <code>what.badge</code>, <code>flags</code>, plus <code>kid</code> and optional <code>revoke_of</code>.</p>
+    </section>
 
-const AMBER = {
-  "rid":"77c6fd0f-2181-4ad9-b72b-df30bbfdb9c6",
-  "when":1738790500,
-  "where":{"coarse":"device:server","host":"demo"},
-  "what":{"badge":"amber","kind":"memory"},
-  "flags":["mem.revoke"],
-  "revoke_of":"7b04a5c1-18bb-479e-94f0-00b3c4b4bf59",
-  "issuer":"openline-memory",
-  "sig":"de174e3cb6e56b2e6b5fd5dcde405e9e50d734a7017a260dc8dd651228249b2a97372d6b4fcb1fdfcd5aaee6b5328cc49a4d83e7e177a6dcf9de7850ee7aa617"
-};
+    <footer class="foot">
+      <div>What we never collect in this demo: prompts, chats, photos, or PII.</div>
+      <div class="muted">© 2025</div>
+    </footer>
+  </main>
 
-// ---- helpers ----
-const enc = new TextEncoder();
-const hexToBytes = (h)=>new Uint8Array(h.match(/.{1,2}/g).map(b=>parseInt(b,16)));
+  <!-- Keep your existing verify logic if you have it.
+       Otherwise drop in a tiny helper script: -->
+  <script>
+    // --- helpers ---
+    const $ = id => document.getElementById(id);
+    const copy = id => navigator.clipboard.writeText($(id).innerText.trim());
+    const copyPub = () => navigator.clipboard.writeText($('pubHex').value);
 
-// deep, lexicographic key sort (matches how the receipt was signed)
-function stable(obj){
-  if (Array.isArray(obj)) return obj.map(stable);
-  if (obj && typeof obj === "object"){
-    const o={}; Object.keys(obj).sort().forEach(k=>o[k]=stable(obj[k])); return o;
-  }
-  return obj;
-}
-function stableStr(obj){ return JSON.stringify(stable(obj)); }
+    // Hex → Uint8Array
+    const hexToU8 = (h) => new Uint8Array((h.match(/.{1,2}/g)||[]).map(b=>parseInt(b,16)));
 
-function verify(textareaId, outId){
-  const el = document.getElementById(textareaId);
-  const out = document.getElementById(outId);
-  try{
-    const r = JSON.parse(el.value);
-    const sigHex = r.sig; if(!sigHex) throw new Error("missing sig");
-    delete r.sig; // sign/verify over the rest
-    const msg = enc.encode(stableStr(r));
-    const sig = hexToBytes(sigHex);
-    const pub = hexToBytes(PUB_HEX);
-    const ok = nacl.sign.detached.verify(msg, sig, pub);
-    out.innerHTML = ok ? `<div class="ok">✅ Signature valid</div>` :
-                         `<div class="bad">❌ Invalid signature</div>`;
-  }catch(e){
-    out.innerHTML = `<div class="bad">⚠️ ${e.message}</div>`;
-  }
-}
+    // Canonical stringify (stable key order, deep)
+    const canon = (v) => {
+      if (Array.isArray(v)) return `[${v.map(canon).join(',')}]`;
+      if (v && typeof v === 'object') {
+        return `{${Object.keys(v).sort().map(k=>`${JSON.stringify(k)}:${canon(v[k])}`).join(',')}}`;
+      }
+      return JSON.stringify(v);
+    };
 
-// prefill UI
-document.getElementById("pub").textContent = PUB_HEX;
-document.getElementById("green").value = JSON.stringify(GREEN, null, 2);
-document.getElementById("amber").value = JSON.stringify(AMBER, null, 2);
-</script>
+    // NaCl verify (expects window.nacl present). If you already include tweetnacl, this just works.
+    function verify(jsonId, resultId){
+      runVerify($(jsonId).innerText, resultId);
+    }
+    function verifyPaste(){
+      runVerify($('pasteArea').value, 'pasteResult');
+    }
+    function runVerify(txt, resultId){
+      try{
+        const obj = JSON.parse(txt);
+        const sigHex = obj.sig || '';
+        const kid = obj.kid || 'unknown';
+        delete obj.sig;
+        const msg = new TextEncoder().encode(canon(obj));
+        const sig = hexToU8(sigHex);
+        const pubHex = $('pubHex').value.trim();
+        const pub = hexToU8(pubHex.replace(/[^0-9a-f]/gi,''));
+        const ok = window.nacl && window.nacl.sign.detached.verify(msg, sig, pub);
+        $(resultId).innerHTML = ok
+          ? `<span class="ok">VALID</span> <span class="muted">kid=${kid}</span>`
+          : `<span class="bad">INVALID</span>`;
+      }catch(e){
+        $(resultId).innerHTML = `<span class="bad">PARSE ERROR</span>`;
+      }
+    }
+  </script>
+  <!-- If you don’t already include NaCl, add this one line (OK for demo).
+       For true offline, download it as tweetnacl.min.js and reference locally. -->
+  <script src="https://cdn.jsdelivr.net/npm/tweetnacl@1.0.3/nacl.min.js" integrity="sha384-c0G6T1z5Vh0kq0y2xSg8bH8aZkzK5m2Q2YkM5PdzmG8QWk4H3p4yfxN1e5QdZ0wV" crossorigin="anonymous"></script>
 </body>
 </html>
